# polars_playground

./: .gitignore  aq-demo-polars.py  drop_null_cols.py  duckdb_read_process_csvs.py  duckplyr_play.R  extract_csv_zip_delete.sh  file.csv  gva.py  gva_gemini_polars.py  gva_normalise.md  httpx-test.py  ibis-ld-duck.py  ld_db.sql  ld_duckdb.py  ld_prep.py  lufdaten_polars.ipynb  make_ods_sensor_data.sql  nomis_visa.py  performance.ipynb  plates.py  pyproject.toml  read_bme280.py  sensor.nu  test.ipynb  test_csv_download_ods_tls.py
data/: gva_per_hour_cp_normalised_ukx.csv  gva_per_hour_cp_normalised_ukx_gemini.csv  gva_per_hour_cp_unsmoothed.csv
