[project]
name = "polars-playground"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "duckdb>=1.1.3",
    "graphviz>=0.20.3",
    "ibis-framework[duckdb,examples]>=10.0.0",
    "ipykernel>=6.29.5",
    "jupyter>=1.1.1",
    "notebook>=7.3.2",
    "polars>=1.20.0",
    "pyarrow>=19.0.0",
    "tqdm>=4.67.1",
]
